--- a/web/public/test/unit.html
+++ b/web/public/test/unit.html
@@ -8,9 +8,7 @@
     <script src="/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script src="/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script src="/jasmine-core/lib/jasmine-core/boot.js"></script>
-
-
-    <script src="/angular-mocks/angular-mocks.js"></script>
+    <script src="/sinon-server-1.14.1/index.js"></script>
     <!-- app code -->
     <script src="sandbox.js"></script>
     <!-- specs -->
