added debaser and moved code out of sandbox into real files

--- a/web/public/test/unit.html
+++ b/web/public/test/unit.html
@@ -11,8 +11,9 @@
     <script src="/sinon-server-1.14.1/index.js"></script>
     <!-- app code -->
     <script src="sandbox.js"></script>
+    <script src="../javascripts/gitlabApi.js"></script>
     <!-- specs -->
-
+    <script src="../javascripts/gitlabApi.spec.js"></script>
     <link href="/jasmine-core/lib/jasmine-core/jasmine.css" rel="stylesheet" />
 </head>
     <body>
