--- a/web/public/test/unit.html
+++ b/web/public/test/unit.html
@@ -8,10 +8,10 @@
     <script src="/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script src="/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script src="/jasmine-core/lib/jasmine-core/boot.js"></script>
-    <script src="/sinon-server-1.14.1/index.js"></script>
+    <script src="/sinon-1.14.1/index.js"></script>
     <!-- app code -->
-    <script src="sandbox.js"></script>
     <script src="../javascripts/gitlabApi.js"></script>
+    <script src="sandbox.js"></script>
     <!-- specs -->
     <script src="../javascripts/gitlabApi.spec.js"></script>
     <link href="/jasmine-core/lib/jasmine-core/jasmine.css" rel="stylesheet" />
@@ -19,5 +19,6 @@
     <body>
         <h1>Unit Tests</h1>
         <p>Unit tests should run very fast. They should not have dependencies on the DOM or a server for returning data..</p>
+        Todo: add a form to this page to accept gitlab server and the private token.  It will then add those vars to the url so we can run integration and other tests
     </body>
 </html>
